talent-app/main/default/objects/Employee_Skill__c/Employee_Skill__c.object-meta.xml
<CustomObject>
    <label>Employee Skill</label>
    <nameField>
        <label>Code Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>