talent-app/main/default/objects/Employee_Skill__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill Level</label>
    <referenceTo>Skill_Level__c</referenceTo>
    <relationshipLabel>Employee Skill</relationshipLabel>
    <relationshipName>Employee_Skill</relationshipName>
    <type>Lookup</type>
</CustomField>