talent-app/main/default/objects/Employee_Skill__c/fields/Skill_Level_Disp__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level_Disp__c</fullName>
    <formula>Skill_Level__r.Skill_Num__c</formula>
    <label>FML Skill Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>