talent-app/main/default/objects/Employee_Skill__c/fields/Type_Name_Disp__c.field-meta.xml
<CustomField>
    <fullName>Type_Name_Disp__c</fullName>
    <formula>Skill__r.Skill_Type__r.Name</formula>
    <label>FML Type Name</label>
    <type>Text</type>
</CustomField>