talent-app/main/default/objects/Employee_Skill__c/listViews/List1.listView-meta.xml
<ListView>
    <fullName>List1</fullName>
    <columns>Employee__c</columns>
    <columns>NAME</columns>
    <columns>Skill__c</columns>
    <filterScope>Everything</filterScope>
    <label>List</label>
</ListView>